--- a/sample_config.json
+++ b/sample_config.json
@@ -3,26 +3,25 @@
    "name":"Corrently Demozähler",
    "firstReading":0,
    "firstReadingOut":0,
-   "firstReadingDate":"2020-08-15",
+   "firstReadingDate":"2019-09-05",
    "isProduction":false,
    "revenue":0.12,
-   "amortization":1700,
+   "amortization":1900,
    "firstReadingProd":0,
    "stromkonto":"0xE99c34770d3Fa7F24830F5a16D1D2B4122179394",
    "depot":"0xc52828d0e92465d27FaA02687e69B2e7D7D27Fe8",
    "source":"./index.js",
    "openems_endpoint": "https://fenecon.de/fems/rest/jsonrpc",
-   "influxdb": "db",
-   "influxport": 31101,
-   "influx_feedin_measurement": "data",
-   "influx_feedin_field": "_sum/GridBuyActiveEnergy",
-   "influx_feedout_measurement": "data",
-   "influx_feedout_field": "_sum/GridSellActiveEnergy",
-   "influx_prod_measurement": "data",
-   "influx_prod_field": "_sum/ProductionActiveEnergy",
-   "meterId":"openems-feedin",
-   "prodMeterId":"openems-prod",
-   "zip":"37434",
-   "scaleFactor": 10000,
-   "community": "demo"
+   "openems_femsid": "fems999",
+   "openems_username": "demo@fenecon.de",
+   "openems_password": "femsdemo",
+   "openems_feedin_field": "_sum/GridBuyActiveEnergy",
+   "openems_feedout_field": "_sum/GridSellActiveEnergy",
+   "openems_prod_field": "_sum/ProductionActiveEnergy",
+   "meterId":"_sum/GridBuyActiveEnergy",
+   "prodMeterId":"_sum/ProductionActiveEnergy",
+   "zip":"94469",
+   "scaleFactor": 10000000,
+   "community": "OpenEMS",
+   "uuid":"dev_fems"
 }
