--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casa-corrently-openems",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "description": "Casa Corrently connected to OpenEMS",
   "main": "index.js",
   "scripts": {
@@ -24,10 +24,10 @@
   "bugs": {
     "url": "https://github.com/energychain/casa-corrently-openems/issues"
   },
-  "homepage": "https://github.com/energychain/casa-corrently-openems#readme",
+  "homepage": "https://www.stromdao.de/casa",
   "dependencies": {
     "axios": "^0.20.0",
-    "casa-corrently": "^1.0.9",
+    "casa-corrently": "^1.0.13",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "simple-dependencies-updater": "^0.9.4"
