--- a/.atom-build.yml
+++ b/.atom-build.yml
@@ -11,4 +11,4 @@ targets:
   docker-rm-service:
     cmd: "docker service rm casa-corrently-openems"
   demo-deploy-docker:
-    cmd: "docker build -t stromdao/casa-corrently-openems .; docker push casa-corrently-openems"
+    cmd: "docker build -t stromdao/casa-corrently-openems .; docker push stromdao/casa-corrently-openems"
